--- a/myindex.j2
+++ b/myindex.j2
@@ -1,1 +1,5 @@
-this is my index page
+This is my index page
+
+thisNodeOs is : {{ansible_os_family}}
+ThisNodeIP is : {{ansible_all_ipv4_addresses}}
+
